--- a/Random Photo/index.html
+++ b/Random Photo/index.html
@@ -18,6 +18,6 @@
     </div>
     <button class="btn">Load More</button>
 
-    <script src="index.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
